--- a/app/parts/swiper.html
+++ b/app/parts/swiper.html
@@ -107,8 +107,8 @@
          </div>
          <div class="reviews__arrows">
             <div class="swiper-button-prev reviews-button-prev"></div>
-            <div class="slider-pagination-count">
-               <span class="current">01</span> / <span class="total">05</span>
+            <div class="slider-pagination-count swiper-pagination">
+               <span class="current"></span> / <span class="total"></span>
             </div>
             <div class="swiper-button-next reviews-button-next"></div>
          </div>
